--- a/src/app/pages/organization/employees/templates/job/job-view.html
+++ b/src/app/pages/organization/employees/templates/job/job-view.html
@@ -51,7 +51,7 @@
   <div class="col-sm-4">
     <div class="form-group">
       <label for="inputDepartment">Date Of Joining*</label>
-          <input type="text" class="form-control"  ng-model="empTabCtrl.empJobDetail.JDDate">
+          <input type="text" class="form-control" placeholder="mm-dd-yyyy"  ng-model="empTabCtrl.empJobDetail.JDDate">
     </div>
   </div>
   <div class="col-sm-4">
@@ -59,9 +59,9 @@
       <label for="inputDesignation">Grade*</label>
       <select id="empdesignation_{{$index}}"
                       name="empdesignation_{{$index}}"
-                      ng-model="empTabCtrl.empJobDetail.DesgName"
+                      ng-model="empTabCtrl.empJobDetail.JDEmpGradeId"
                       class="form-control"
-                      ng-options="designation.name as designation.name for designation in empTabCtrl.designation"
+                      ng-options="grade.value as grade.name for grade in empTabCtrl.grade"
                       ng-change="vm.typeOnChange(vm.section.SecType,'Add')"
                       data-placeholder="Select Nav Menu"
                       ng-required="true">
@@ -70,7 +70,7 @@
   </div>
   <div class="col-sm-4">
     <div class="form-group">
-      <label for="inputEmployeeType">Label*</label>
+      <label for="inputEmployeeType">Level*</label>
       <select id="empLevel_{{$index}}"
                       name="empLevel_{{$index}}"
                       ng-model="empTabCtrl.empJobDetail.EmpLevelName"
@@ -129,13 +129,13 @@
   <div class="col-sm-4">
     <div class="form-group">
       <label for="inputDepartment">From Date</label>
-          <input type="text" class="form-control"  ng-model="empTabCtrl.empJobDetail.FromDate">
+          <input type="text" class="form-control" placeholder="mm-dd-yyyy"  ng-model="empTabCtrl.empJobDetail.FromDate">
     </div>
   </div>
   <div class="col-sm-4">
     <div class="form-group">
       <label for="inputDesignation">To Date</label>
-      <input type="text" class="form-control"  ng-model="empTabCtrl.empJobDetail.ToDate">
+      <input type="text" class="form-control" placeholder="mm-dd-yyyy"  ng-model="empTabCtrl.empJobDetail.ToDate">
     </div>
   </div>
   <div class="col-sm-4">
@@ -228,6 +228,5 @@
 </div>
 
   <div class="text-center">
-<button type="button" class="btn btn-primary" ng-click="empTabCtrl.updateForm()">Update</button>
-<button type="button" ui-sref="organization.employee" class="btn btn-primary">Cancel</button>
+<button type="button" class="btn btn-primary" ng-click="empTabCtrl.updateForm()">Save</button>
 </div>
