--- a/src/app/pages/organization/employees/templates/personal/addFamily-modal.html
+++ b/src/app/pages/organization/employees/templates/personal/addFamily-modal.html
@@ -1,4 +1,4 @@
-<div ng-controller="addEmployeeFamilyDetails">
+<div>
 <div class="modal-content">
   <div class="modal-header">
     <button type="button" class="close" ng-click="$dismiss()" aria-label="Close">
