--- a/src/app/pages/organization/employees/upload/empupload.html
+++ b/src/app/pages/organization/employees/upload/empupload.html
@@ -18,6 +18,9 @@
                                         style="display: none;">
                                     </label><br/>
                         <span class="">(Only .xls, .xlsx are supported)</span>
+                        <button type="button" class="btn btn-warning" ng-click="tabCtrl.downloadTemp()">
+                            Download Template</button>
+
                         <div class="schema-form-section row" ng-show="tabCtrl.gridOptions.data.length > 0">
                             <div class="schema-form-section col-xs-12">
                                 <div class="form-group schema-form-text  has-feedback">
@@ -36,7 +39,7 @@
                                     <span>Show Preview</span>
                                 </label>
 
-                               
+
 
                             </div>
                         </div>
@@ -49,7 +52,7 @@
                                     <span>Show Employee Full Name</span>
                                 </label>
 
-                               
+
 
                             </div>
                         </div>
@@ -119,7 +122,7 @@
                                             ng-options="opt.value as opt.name for opt in tabCtrl.gridOptions.columnDefs">
                                         </select></td>
                                     <td class="col-sm-2" style="padding-top: 8px; padding-bottom: 8px"><span ng-show="field.column2.required" class="font-red">*</span> <span ng-class="{'font-red':field.column2.required}">{{field.column2.text}}</span></td>
-                                    <td style="padding-top: 8px; padding-bottom: 8px"> 
+                                    <td style="padding-top: 8px; padding-bottom: 8px">
                                         <select style="width:200px" class="form-control" name="{{field.column2.name}}" ng-model="field.column2.value">
                                             <option class="font-red" value="none"><em class="font-red font-italic">None</em></option>
                                             <option ng-repeat="col in tabCtrl.gridOptions.columnDefs" value="{{col.name}}">{{col.name}}</option>
@@ -234,7 +237,7 @@
                     <button type="button" ng-click="tabCtrl.importDataUpload()" class="btn btn-info">
                        {{(tabCtrl.migrate.step3)?"Import":"Next"}}
                     </button>
-                    
+
 
                 </div>
             </div>
