--- a/src/app/pages/organization/employees/templates/job/job-view.html
+++ b/src/app/pages/organization/employees/templates/job/job-view.html
@@ -88,7 +88,7 @@
       <div class="checkbox">
       <label class="custom-checkbox">      
       <input type="checkbox" ng-model="empTabCtrl.empJobDetail.JDIsOT" >   
-      <span>IsOT</span>
+      <span>OT</span>
     </label>
    </div>
   </div> 
@@ -110,14 +110,14 @@
   </div> 
 </div>
 
-<div ng-if="empTabCtrl.empJobDetail.JDIsOT" class="row">
-  <div class="col-sm-4">
-    <div class="form-group">
+<div class="row" ng-if="empTabCtrl.empJobDetail.JDIsOT">
+  <div class="col-sm-4" ng-if="empTabCtrl.empJobDetail.SingleOT">
+    <div class="form-group"  >
       <label for="inputDepartment">Single OT Rate</label>
           <input type="text" class="form-control"  ng-model="empTabCtrl.empJobDetail.JDSingleOTRate">
     </div>
   </div> 
-   <div class="col-sm-4">
+   <div class="col-sm-4" ng-if="empTabCtrl.empJobDetail.JDDoubleOT">
     <div class="form-group">
       <label for="inputDepartment">Double OT Rate</label>
           <input type="text" class="form-control"  ng-model="empTabCtrl.empJobDetail.DoubleOTRate">
@@ -125,6 +125,7 @@
   </div> 
 </div>
 <div ng-show="empTabCtrl.contractBase">
+  <hr>
 <div class="row">
   <div class="col-sm-4">
     <div class="form-group">
@@ -140,7 +141,7 @@
   </div>
   <div class="col-sm-4">
     <div class="form-group">
-      <label for="inputEmployeeType">Vender</label>
+      <label for="inputEmployeeType">Vendor</label>
       <select id="empLevel_{{$index}}"
                       name="empLevel_{{$index}}"
                       ng-model="empTabCtrl.empJobDetail.EmpLevelName"
@@ -225,6 +226,7 @@
     </div>
   </div>
 </div>
+ <hr>
 </div>
 
   <div class="text-center">
