--- a/src/app/pages/attendance/masters/detail/mastersdetail.html
+++ b/src/app/pages/attendance/masters/detail/mastersdetail.html
@@ -1,3 +1,4 @@
+
 <div class="message-container" ng-class="{'expanded': tabCtrl.navigationCollapsed}">
   <div class="message">
     <div class="row">
@@ -5,21 +6,21 @@
         <a href class="collapse-navigation-link ion-navicon"
            ng-click="tabCtrl.navigationCollapsed=!tabCtrl.navigationCollapsed"></a>
       </div>
-      <button ui-sref="components.mail.label({label : attdetailCtrl.label})"  type="button" class="back-button btn btn-default btn-with-icon"><i
+      <button ui-sref="organization.masters.label({pageId : detailCtrl.pageId})"  type="button" class="back-button btn btn-default btn-with-icon"><i
           class="ion-chevron-left"></i>Back
       </button>
     </div>
     <div class="person-info row">
       <div class="col-lg-4 col-md-12  no-padding">
-        <img ng-src="{{attdetailCtrl.mail.name.split(' ')[0] | profilePicture}}" class="human-picture">
+        <img ng-src="{{detailCtrl.mail.name.split(' ')[0] | profilePicture}}" class="human-picture">
 
         <div class="name">
-          <h2 class="name-h">{{attdetailCtrl.mail.name.split(' ')[0]}}</h2>
+          <h2 class="name-h">{{detailCtrl.mail.name.split(' ')[0]}}</h2>
 
-          <h2 class="name-h second-name">{{attdetailCtrl.mail.name.split(' ')[1]}}</h2>
+          <h2 class="name-h second-name">{{detailCtrl.mail.name.split(' ')[1]}}</h2>
 
           <div>
-            <span class="mail-tag tag label {{attdetailCtrl.mail.tag}}">{{attdetailCtrl.mail.tag}}</span>
+            <span class="mail-tag tag label {{detailCtrl.mail.tag}}">{{detailCtrl.mail.tag}}</span>
           </div>
         </div>
       </div>
@@ -31,7 +32,7 @@
           </div>
           <div>
             <i class="ion-email"></i>
-            <span class="email">{{attdetailCtrl.mail.email}}</span>
+            <span class="email">{{detailCtrl.mail.email}}</span>
           </div>
         </div>
       </div>
@@ -39,7 +40,7 @@
       <div class="col-lg-4 col-md-6 col-xs-12 no-padding">
         <div class="contact-info position-address">
           <div>
-            <span class="position">{{attdetailCtrl.mail.position}}</span>
+            <span class="position">{{detailCtrl.mail.position}}</span>
           </div>
           <div>
             <span class="address">12 Nezavisimosti st. Vilnius, Lithuania</span>
@@ -51,32 +52,32 @@
     </div>
     <div class="line"></div>
     <div class="message-details">
-      <span class="subject">{{attdetailCtrl.mail.subject}} </span>
-      <span class="date">• {{attdetailCtrl.mail.date | date : 'h:mm a MMMM d '}}</span>
+      <span class="subject">{{detailCtrl.mail.subject}} </span>
+      <span class="date">• {{detailCtrl.mail.date | date : 'h:mm a MMMM d '}}</span>
     </div>
     <div class="line"></div>
-    <div ng-bind-html="attdetailCtrl.mail.body" class="message-body">
+    <div ng-bind-html="detailCtrl.mail.body" class="message-body">
 
     </div>
     <div class="line"></div>
-    <div class="attachment" ng-show="attdetailCtrl.mail.attachment">
+    <div class="attachment" ng-show="detailCtrl.mail.attachment">
       <span class="file-links">1 Attachment - <a href>View</a> | <a href>Download</a></span>
       <div>
         <i class="file-icon ion-document"></i>
-        <span class="file-name">{{attdetailCtrl.mail.attachment}}</span>
+        <span class="file-name">{{detailCtrl.mail.attachment}}</span>
       </div>
     </div>
-    <div class="line" ng-show="attdetailCtrl.mail.attachment"></div>
+    <div class="line" ng-show="detailCtrl.mail.attachment"></div>
     <div class="answer-container">
-      <button type="button" class="btn btn-with-icon" ng-click="tabCtrl.showCompose(attdetailCtrl.mail.subject,attdetailCtrl.mail.email,'')"><i class="ion-reply"></i>Reply</button>
-      <button type="button" class="btn btn-with-icon" ng-click="tabCtrl.showCompose(attdetailCtrl.mail.subject,'',attdetailCtrl.mail.body)"><i class="ion-forward"></i>Forward</button>
+      <button type="button" class="btn btn-with-icon" ng-click="tabCtrl.showCompose(detailCtrl.mail.subject,detailCtrl.mail.email,'')"><i class="ion-reply"></i>Reply</button>
+      <button type="button" class="btn btn-with-icon" ng-click="tabCtrl.showCompose(detailCtrl.mail.subject,'',detailCtrl.mail.body)"><i class="ion-forward"></i>Forward</button>
       <button type="button" class="btn btn-with-icon"><i class="ion-printer"></i>Print</button>
       <button type="button" class="btn btn-with-icon"><i class="ion-android-remove-circle"></i>Spam</button>
       <button type="button" class="btn btn-with-icon"><i class="ion-android-delete"></i>Delete</button>
     </div>
 
   </div>
-  <div ng-show="!attdetailCtrl.mail">
+  <div ng-show="!detailCtrl.mail">
     <h5 ng-class="text-center">Nothing to show</h5>
   </div>
 </div>
