--- a/src/app/pages/organization/employees/upload/empupload.html
+++ b/src/app/pages/organization/employees/upload/empupload.html
@@ -18,7 +18,7 @@
                                         style="display: none;">
                                     </label><br/>
                         <span class="">(Only .xls, .xlsx are supported)</span>
-                        
+
 
                         <div class="schema-form-section row" ng-show="tabCtrl.gridOptions.data.length > 0">
                             <div class="schema-form-section col-xs-12">
@@ -32,14 +32,10 @@
                         <hr ng-show="tabCtrl.gridOptions.data.length >= 0" />
                         <div class="row" ng-show="tabCtrl.gridOptions.data.length >= 0">
                             <div class="col-md-12">
-
                                 <label class="checkbox-inline custom-checkbox nowrap">
                                     <input type="checkbox" id="inlineCheckbox01" ng-model="tabCtrl.showPreview">
                                     <span>Show Preview</span>
                                 </label>
-
-
-
                             </div>
                         </div>
 
@@ -47,12 +43,9 @@
                             <div class="col-md-12">
 
                                 <label class="checkbox-inline custom-checkbox nowrap">
-                                    <input type="checkbox" id="inlineCheckbox02" ng-model="tabCtrl.showEmpName">
+                                    <input type="checkbox" id="inlineCheckbox02"  ng-model="tabCtrl.showEmployeeName">
                                     <span>Show Employee Full Name</span>
                                 </label>
-
-
-
                             </div>
                         </div>
                         <hr ng-show="tabCtrl.gridOptions.data.length >= 0" />
@@ -67,7 +60,7 @@
                                 <button type="button" ng-click="back('organization.employees.list')" ng-hide="tabCtrl.gridOptions.data.length > 0" class="btn btn-default">
                                     Back
                                 </button>
-                                <button type="button"  class="btn btn-warning" ng-hide="tabCtrl.gridOptions.data.length > 0" ng-click="tabCtrl.downloadTemp()">
+                                <button type="button" class="btn btn-warning" ng-hide="tabCtrl.gridOptions.data.length > 0" ng-click="tabCtrl.downloadTemp()">
                             Download Template</button>
                             </div>
                         </div>
@@ -121,13 +114,19 @@
                             </thead>
                             <tbody>
                                 <tr ng-repeat="field in table.rows">
-                                    <td ng-hide="abc{{$index}}" class="padT8 padB8 col-sm-2" style="padding-left:10px; text-align: left"><span ng-show="field.column1.required" class="font-red">*</span> <span ng-class="{'font-red':field.column1.required}">{{field.column1.text}}</span></td>
-                                    <td style="padding-top: 8px; padding-bottom: 8px; padding-right: 20px;"> <select style="width:200px" class="form-control" name="{{field.column1.name}}" ng-model="field.column1.value"
-                                            ng-options="opt.value as opt.name for opt in tabCtrl.gridOptions.columnDefs">
+                                    <td class="padT8 padB8 col-sm-2" style="padding-left:10px; text-align: left"><span ng-show="field.column1.required" class="font-red">*</span> <span ng-class="{'font-red':field.column1.required}">{{field.column1.text}}</span></td>
+                                    <td style="padding-top: 8px; padding-bottom: 8px; padding-right: 20px;">
+                                        <select style="width:200px" class="form-control" name="{{field.column1.name}}" 
+                                        ng-model="field.column1.value">
+                                        <option class="font-red" value="none"><em class="font-red font-italic">None</em></option>
+                                            <option ng-repeat="col in tabCtrl.gridOptions.columnDefs" value="{{col.name}}">{{col.name}}</option>
+
+                                         
                                         </select></td>
-                                    <td ng-hide="xyz{{$index}}" class="col-sm-2" style="padding-top: 8px; padding-bottom: 8px"><span ng-show="field.column2.required" class="font-red">*</span> <span ng-class="{'font-red':field.column2.required}">{{field.column2.text}}</span></td>
-                                    <td style="padding-top: 8px; padding-bottom: 8px">
-                                        <select style="width:200px" class="form-control" name="{{field.column2.name}}" ng-model="field.column2.value">
+                                    <td ng-show="(field.column2!==undefined)" class="col-sm-2" style="padding-top: 8px; padding-bottom: 8px"><span ng-show="field.column2.required" class="font-red">*</span> <span ng-class="{'font-red':field.column2.required}">{{field.column2.text}}</span></td>
+                                    <td ng-show="(field.column2!==undefined)" style="padding-top: 8px; padding-bottom: 8px">
+                                        <select style="width:200px" class="form-control" name="{{field.column2.name}}" 
+                                        ng-model="field.column2.value">
                                             <option class="font-red" value="none"><em class="font-red font-italic">None</em></option>
                                             <option ng-repeat="col in tabCtrl.gridOptions.columnDefs" value="{{col.name}}">{{col.name}}</option>
                                        </select></td>
@@ -243,6 +242,15 @@
                     </button>
 
 
+                    <!--<button type="button" ng-click="tabCtrl.nextDataUpload()" ng-show="tabCtrl.gridOptions.data.length > 0" class="btn btn-info">
+                                    Next
+                                </button>
+                    <button type="button" ng-click="back('organization.employees.list')" ng-hide="tabCtrl.gridOptions.data.length > 0" class="btn btn-default">
+                                    Back
+                                </button>-->
+
+
+
                 </div>
             </div>
         </uib-tab>
@@ -271,7 +279,7 @@
 </script>-->
 <style>
     .grid {
-        height: 300px;
+        height: 400px;
         width: 500px;
     }
     
