--- a/src/app/pages/organization/employees/add/employeeAdd.html
+++ b/src/app/pages/organization/employees/add/employeeAdd.html
@@ -2,9 +2,8 @@
   .css-form.ng-invalid.ng-touched {
     border: 1px solid #FF0000;
   }
-
+  
   .css-form.focusOn.ng-invalid {
-
     background: #FFFFFF;
   }
 </style>
@@ -56,12 +55,23 @@
         <div class="form-group">
           <label for="inputDOB">Date Of Joining*</label>
           <!--<input type="text" class="form-control" id="inputDOB" ng-model="addCtrl.empAdd.JDDate" placeholder="MM-DD-YYYY">-->
-           <p class="input-group">
-            <input type="text" class="form-control" uib-datepicker-popup="{{format}}" datepicker-options="options" ng-model="addCtrl.empAdd.JDDate" is-open="opened" ng-required="true" close-text="Close" alt-input-formats="altInputFormats" show-button-bar="false" />
+          <!--<p class="input-group">
+            <input type="text" class="form-control" uib-datepicker-popup="{{format}}" datepicker-options="options" 
+            ng-model="addCtrl.empAdd.JDDate" is-open="opened" ng-required="true" close-text="Close" alt-input-formats="altInputFormats" show-button-bar="false" />
           <span class="input-group-btn">
             <button type="button" class="btn btn-default" ng-click="open()"><i class="glyphicon glyphicon-calendar"></i></button>
           </span>
-        </p>
+        </p>-->
+          <datepicker date-format="dd-MMMM-yyyy" selector="form-control">           
+            <input ng-model="addCtrl.empAdd.JDDate" type="text" class="form-control"/>  
+            <!--<span class="input-group-addon" style="cursor: pointer">
+        <i class="glyphicon glyphicon-calendar"></i>
+        </span>            -->
+             <!--<span class="input-group-btn">
+            <button type="button" class="btn btn-default"><i class="glyphicon glyphicon-calendar"></i></button>            
+           </span>-->
+         
+          </datepicker>
         </div>
       </div>
       <div class="col-sm-4">
@@ -144,7 +154,7 @@
     <div class="text-center">
       <button type="button" class="btn btn-primary" ng-click="addCtrl.saveForm()">Save</button>
       <button type="button" ng-click="addCtrl.clear()" class="btn btn-primary">Clear</button>
-       <button type="button" ng-click="back('organization.employees.list')" class="btn btn-primary">Back</button>
+      <button type="button" ng-click="back('organization.employees.list')" class="btn btn-primary">Back</button>
     </div>
   </form>
 </div>
