--- a/src/app/pages/organization/employees/templates/personal/personal-view.html
+++ b/src/app/pages/organization/employees/templates/personal/personal-view.html
@@ -7,12 +7,15 @@
     <div class="form-group">
       <label for="inputDOB">Date Of Birth*</label>       
             <!--<input type="text" class="form-control" id="inputDOB" ng-model="empTabCtrl.empPersonalDetail.PdDateOfBirth"> -->
-         <p class="input-group">
+         <!--<p class="input-group">
             <input type="text" class="form-control" uib-datepicker-popup="{{formatdob}}" datepicker-options="optionsdob" ng-model="empTabCtrl.empPersonalDetail.PdDateOfBirth" is-open="openeddob" ng-required="true" close-text="Close" alt-input-formats="altInputFormats" show-button-bar="false" />
           <span class="input-group-btn">
             <button type="button" class="btn btn-default" ng-click="opendob()"><i class="glyphicon glyphicon-calendar"></i></button>
           </span>
-         </p>       
+         </p>       -->
+            <datepicker date-format="dd-MMMM-yyyy" selector="form-control">           
+            <input ng-model="empTabCtrl.empPersonalDetail.PdDateOfBirth" type="text" class="form-control"/>            
+            </datepicker>
     </div>
   </div>
   <div class="col-sm-4">
@@ -61,12 +64,15 @@
     <div class="form-group">
       <label for="inputAnniversaryDate">Anniversary Date*</label>
            <!--<input type="text" class="form-control" id="inputAnniversaryDate" ng-model="empTabCtrl.empPersonalDetail.PDAnniversaryDate"> -->
-         <p class="input-group">
+         <!--<p class="input-group">
              <input type="text" class="form-control" uib-datepicker-popup="{{formatanniversary}}" datepicker-options="optionsanniversary" ng-model="empTabCtrl.empPersonalDetail.PDAnniversaryDate" is-open="openedanniversary" ng-required="true" close-text="Close" alt-input-formats="altInputFormats" show-button-bar="false" />
           <span class="input-group-btn">
             <button type="button" class="btn btn-default" ng-click="openanniversary()"><i class="glyphicon glyphicon-calendar"></i></button>
           </span>
-         </p> 
+         </p> -->
+          <datepicker date-format="dd-MMMM-yyyy" selector="form-control">           
+            <input ng-model="empTabCtrl.empPersonalDetail.PDAnniversaryDate" type="text" class="form-control"/>            
+            </datepicker>
    </div>
   </div>
 </div>
@@ -131,19 +137,19 @@
   <div class="col-sm-4">
     <div class="form-group">
       <label for="inputEmgName">Name</label>       
-             <input type="text" class="form-control" id="inputEmgName" ng-model="empTabCtrl.empPersonalDetail.PdEmgName">       
+             <input type="text" class="form-control" id="inputEmgName" ng-model="empTabCtrl.empEmgContact.ECPersonName">       
     </div>
   </div>
   <div class="col-sm-4">
     <div class="form-group">
       <label for="inputEmgMobile">Mobile</label>
-       <input type="text" class="form-control" id="inputEmgMobile" ng-model="empTabCtrl.empPersonalDetail.PdEmgMobile">
+       <input type="text" class="form-control" id="inputEmgMobile" ng-model="empTabCtrl.empEmgContact.ECContactNo">
     </div>
   </div>
   <div class="col-sm-4">
     <div class="form-group">
       <label for="inputEmgAddress">Address</label>
-           <input type="text" class="form-control" id="inputEmgAddress" ng-model="empTabCtrl.empPersonalDetail.PdEmgAddress"> 
+           <input type="text" class="form-control" id="inputEmgAddress" ng-model="empTabCtrl.empEmgContact.ECAddress"> 
     </div>
   </div>
 </div>
@@ -157,13 +163,13 @@
   <div class="col-sm-4">
     <div class="form-group">
       <label for="inputLine1">Line1</label>       
-             <input type="text" class="form-control" id="inputLine1" ng-model="empTabCtrl.empPersonalDetail.PdLine1">       
+             <input type="text" class="form-control" id="inputLine1" ng-model="empTabCtrl.empContactDetail.CDAddLine1">       
     </div>
   </div>
   <div class="col-sm-4">
     <div class="form-group">
       <label for="inputLine2">Line2</label>
-       <input type="text" class="form-control" id="inputLine2" ng-model="empTabCtrl.empPersonalDetail.PdLine2">
+       <input type="text" class="form-control" id="inputLine2" ng-model="empTabCtrl.empContactDetail.CDAddLine2">
     </div>
   </div>
   <div class="col-sm-4">
@@ -171,9 +177,9 @@
       <label for="inputEmgAddress">Country</label>
          <select id="empCmpCountry_{{$index}}"
                       name="empCmpCountry_{{$index}}"
-                      ng-model="empTabCtrl.empPersonalDetail.PdCountry"
+                      ng-model="empTabCtrl.empContactDetail.CountryId"
                       class="form-control"
-                      ng-options="Country.value as Country.name for Country in empTabCtrl.Country"
+                      ng-options="country.value as country.name for country in empTabCtrl.CountryId"
                       ng-change="vm.typeOnChange(vm.section.SecType,'Add')"
                       data-placeholder="Select Nav Menu"
                       ng-required="true">
@@ -187,9 +193,9 @@
       <label for="empCmpState_{{$index}}">State</label>       
          <select id="empCmpState_{{$index}}"
                       name="empCmpState_{{$index}}"
-                      ng-model="empTabCtrl.empPersonalDetail.PdState"
+                      ng-model="empTabCtrl.empContactDetail.StateId"
                       class="form-control"
-                      ng-options="State.value as State.name for State in empTabCtrl.State"
+                      ng-options="state.value as state.name for state in empTabCtrl.StateId | filter:{CountryId:empTabCtrl.empContactDetail.CountryId}"
                       ng-change="vm.typeOnChange(vm.section.SecType,'Add')"
                       data-placeholder="Select Nav Menu"
                       ng-required="true">
@@ -201,9 +207,9 @@
       <label for="empCmpCity_{{$index}}">City</label>
       <select id="empCmpCity_{{$index}}"
                       name="empCmpCity_{{$index}}"
-                      ng-model="empTabCtrl.empPersonalDetail.PdCity"
+                      ng-model="empTabCtrl.empContactDetail.CityId"
                       class="form-control"
-                      ng-options="City.value as City.name for City in empTabCtrl.City"
+                      ng-options="city.value as city.name for city in empTabCtrl.CityId |filter:{StateId:empTabCtrl.empContactDetail.StateId}"
                       ng-change="vm.typeOnChange(vm.section.SecType,'Add')"
                       data-placeholder="Select Nav Menu"
                       ng-required="true">
@@ -213,8 +219,7 @@
   <div class="col-sm-4">
     <div class="form-group">
       <label for="inputZip">Zip</label>
-       <input type="text" class="form-control" id="inputZip" ng-model="empTabCtrl.empPersonalDetail.PdZip">
-         
+       <input type="text" class="form-control" id="inputZip" ng-model="empTabCtrl.empContactDetail.CDPincode">       
     </div>
   </div>
 </div>
@@ -222,35 +227,35 @@
  <div class="col-sm-5">
       <div class="checkbox">
       <label class="custom-checkbox">      
-      <input type="checkbox" ng-model="empTabCtrl.empJobDetail.PdPermanent" >   
+      <input type="checkbox" ng-click="empTabCtrl.permanentAddress()" ng-model="empTabCtrl.CDPermanent" >   
       <span>Permanent Address Same as Current Address</span>
     </label>
    </div>
   </div> 
   </div> 
 <h3 class="">Permanent Address</h3> <hr>
-<div ng-if="!empTabCtrl.empJobDetail.PdPermanent">
+<div >
 <div  class="row">
   <div class="col-sm-4">
     <div class="form-group">
       <label for="inputPerLine1">Line1</label>       
-             <input type="text" class="form-control" id="inputPerLine1" ng-model="empTabCtrl.empPersonalDetail.PdPerLine1">       
+             <input type="text" class="form-control" id="inputPerLine1" ng-model="empTabCtrl.empContactDetail.CDPAddLine1">       
     </div>
   </div>
   <div class="col-sm-4">
     <div class="form-group">
       <label for="inputPerLine2">Line2</label>
-       <input type="text" class="form-control" id="inputPerLine2" ng-model="empTabCtrl.empPersonalDetail.PdPerLine2">
+       <input type="text" class="form-control" id="inputPerLine2" ng-model="empTabCtrl.empContactDetail.CDPAddLine2">
     </div>
   </div>
   <div class="col-sm-4">
     <div class="form-group">
       <label for="inputPerCountry">Country</label>
-         <select id="inputPerCountry_{{$index}}"
-                      name="inputPerCountry_{{$index}}"
-                      ng-model="empTabCtrl.empPersonalDetail.PdPerCountry"
+         <select id="empCmpCountry_{{$index}}"
+                      name="empCmpCountry_{{$index}}"
+                      ng-model="empTabCtrl.empContactDetail.PCountryId"
                       class="form-control"
-                      ng-options="Country.value as Country.name for Country in empTabCtrl.Country"
+                      ng-options="country.value as country.name for country in empTabCtrl.CountryId"
                       ng-change="vm.typeOnChange(vm.section.SecType,'Add')"
                       data-placeholder="Select Nav Menu"
                       ng-required="true">
@@ -262,25 +267,25 @@
   <div class="col-sm-4">
     <div class="form-group">
       <label for="empPerState_{{$index}}">State</label>       
-         <select id="empCmpState_{{$index}}"
-                      name="empPerState_{{$index}}"
-                      ng-model="empTabCtrl.empPersonalDetail.PdPerState"
+      <select id="empCmpState_{{$index}}"
+                      name="empCmpState_{{$index}}"
+                      ng-model="empTabCtrl.empContactDetail.PStateId"
                       class="form-control"
-                      ng-options="State.value as State.name for State in empTabCtrl.State"
+                      ng-options="state.value as state.name for state in empTabCtrl.StateId | filter:{CountryId:empTabCtrl.empContactDetail.PCountryId}"
                       ng-change="vm.typeOnChange(vm.section.SecType,'Add')"
                       data-placeholder="Select Nav Menu"
                       ng-required="true">
-               </select>      
+               </select>       
     </div>
   </div>
   <div class="col-sm-4">
     <div class="form-group">
       <label for="empPerCity_{{$index}}">City</label>
-      <select id="empPerCity_{{$index}}"
-                      name="empPerCity_{{$index}}"
-                      ng-model="empTabCtrl.empPersonalDetail.PdPerCity"
+      <select id="empCmpCity_{{$index}}"
+                      name="empCmpCity_{{$index}}"
+                      ng-model="empTabCtrl.empContactDetail.PCityId"
                       class="form-control"
-                      ng-options="City.value as City.name for City in empTabCtrl.City"
+                      ng-options="city.value as city.name for city in empTabCtrl.CityId |filter:{StateId:empTabCtrl.empContactDetail.PStateId}"
                       ng-change="vm.typeOnChange(vm.section.SecType,'Add')"
                       data-placeholder="Select Nav Menu"
                       ng-required="true">
@@ -290,15 +295,14 @@
   <div class="col-sm-4">
     <div class="form-group">
       <label for="inputPerZip">Zip</label>
-       <input type="text" class="form-control" id="inputPerZip" ng-model="empTabCtrl.empPersonalDetail.PdPerZip">
+       <input type="text" class="form-control" id="inputPerZip" ng-model="empTabCtrl.empContactDetail.CDPPincode">
          
     </div>
   </div>
 </div>
 </div>
  <div class="text-center">
-<button type="button" class="btn btn-primary" ng-click="empTabCtrl.updateForm()">Update</button>
-<button type="button"  class="btn btn-primary">Cancel</button>
+<button type="button" class="btn btn-primary" ng-click="empTabCtrl.saveContact()">Save</button>
 </div>
         </uib-tab>
         
